--- a/css/color_task.css
+++ b/css/color_task.css
@@ -3,9 +3,16 @@
     margin: 0;
     list-style: none;
 }
+@font-face {
+    font-family: 'PT Sans';
+       src: url('../fonts/PTSans-Regular.woff2') format('woff2'),
+        url('../fonts/PTSans-Regular.woff') format('woff'),
+        url('../fonts/PTSans-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
 body{
-    /* font-family: "PT Sans"; */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'PT Sans';
     background-color: aliceblue;
 }
 .blog{
@@ -92,8 +99,6 @@ border: none;
     fill: #fff;
     border-radius: 30px;
 }
-
-
 
 .name_designation{
     display: grid;
@@ -232,6 +237,7 @@ a.visitwebsite{
 .socialicons{
    display: flex;
    align-items: center;
+   justify-content: center;
 }
 .icon{
     width: 30px;
